# cwru_ariac

./: .gitignore  Laser_scanner_notes.txt  README.md  ariac_commands.txt  wsn_ariac_notes
ariac/: .gitignore
ariac/ariac_example/: CMakeLists.txt
ariac/ariac_example/config/: sample_gear_conf.yaml
ariac/ariac_example/scripts/: ariac_example_node.py
ariac/ariac_example/src/: ariac_example_node.cpp
ariac/osrf_gear/: CMakeLists.txt
ariac/osrf_gear/config/: comp_conf1.yaml  comp_conf2.yaml  qual1a.yaml  qual1b.yaml  robot_and_sensors.yaml  sample.yaml  sample_scenario1.yaml  sample_scenario2.yaml  sample_scenario3.yaml  sample_scenario_drop.yaml
ariac/osrf_gear/include/: ConveyorBeltPlugin.hh  ROSAGVPlugin.hh  ROSAriacKitTrayPlugin.hh  ROSConveyorBeltPlugin.hh  ROSLogicalCameraPlugin.hh  SideContactPlugin.hh
ariac/osrf_gear/include/osrf_gear/: ARIAC.hh  AriacScorer.h  PopulationPlugin.hh  ROSAriacTaskManagerPlugin.hh  VacuumGripperPlugin.hh
ariac/osrf_gear/launch/: gear.launch.template  gear.urdf.xacro.template
ariac/osrf_gear/launch/ur10/: ur10.xml
ariac/osrf_gear/launch/vacuum_gripper/: vacuum_gripper.urdf.xacro
ariac/osrf_gear/models/kit_tray/: model.sdf
ariac/osrf_gear/models/laser_profiler/: model.sdf
ariac/osrf_gear/models/logical_camera/: model.sdf
ariac/osrf_gear/models/proximity_sensor/: model.config  model.sdf
ariac/osrf_gear/msg/: ConveyorBeltState.msg
ariac/osrf_gear/rviz/: ariac.rviz
ariac/osrf_gear/script/: gear.py
ariac/osrf_gear/src/: AriacScorer.cpp  ConveyorBeltPlugin.cc  ConveyorController.cc  PopulationPlugin.cc  ROSAGVPlugin.cc  ROSAriacKitTrayPlugin.cc  ROSAriacTaskManagerPlugin.cc  ROSConveyorBeltPlugin.cc  ROSConveyorController.cc  ROSLogicalCameraPlugin.cc  ROSPopulationPlugin.cc  ROSVacuumGripperPlugin.cc  SideContactPlugin.cc  VacuumGripperPlugin.cc
ariac/osrf_gear/worlds/: gear.world.template
ariac_traj_sender/: CMakeLists.txt  README.md  package.xml
ariac_traj_sender/src/: traj_sender.cpp
ariac_ur_fk_ik/: CMakeLists.txt  package.xml
ariac_ur_fk_ik/include/ariac_ur_fk_ik/: ur_kin.h
ariac_ur_fk_ik/src/: ariac_interactive_ur10_fk_ik_test_main.cpp  ariac_ur10_fk_ik.cpp  ariac_ur10_fk_ik_test_main.cpp  ariac_ur_kin.cpp
ariac_xform_utils/: CMakeLists.txt  README.md  package.xml
ariac_xform_utils/include/ariac_xform_utils/: ariac_xform_utils.h
ariac_xform_utils/src/: ariac_xform_utils.cpp
cwru_ariac/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  robot_pick_place_dev_notes
cwru_ariac/action/: RobotMove.action
cwru_ariac/config/: ariac_conf.yaml  laser_test.yaml  qual1.yaml  qual2.yaml  qual3.yaml  qual3_shrunken.yaml  sensor_manager_test.yaml  vision.yaml
cwru_ariac/include/: Agv1CameraEstimator.h  AriacBase.h  BinManager.h  CameraEstimator.h  Cheater.h  ConveyorManager.h  GlobalPlanner.h  IDGenerator.h  LaserScanner.h  OraclePlanner.h  OraclePlanningUtils.h  OrderManager.h  PlanningUtils.h  QualitySensor.h  RobotInterface.h  RobotMove.h  RobotPlanner.h  SensorManager.h  SwappingAlgorithm.h  TrayClearer.h  cwru_ariac.h
cwru_ariac/launch/: run_comp.launch
cwru_ariac/msg/: AGV.msg  Bin.msg  BoundBox.msg  Part.msg  PartType.msg  Parts.msg  RobotState.msg
cwru_ariac/rviz/: rviz_ariac.rviz
cwru_ariac/src/: Agv1CameraEstimator.cpp  BinManager.cpp  CameraEstimator.cpp  Cheater.cpp  CompetitionMainNode.cpp  ConveyorManager.cpp  GlobalPlanner.cpp  OraclePlanner.cpp  OraclePlanningUtils.cpp  OrderManager.cpp  PlanningUtils.cpp  QualitySensor.cpp  RobotInterface.cpp  RobotMove.cpp  RobotPlanner.cpp  SensorManager.cpp  SwappingAlgorithm.cpp  TrayClearer.cpp  camera_tester.cpp  competition_main.cpp  factory_planner.cpp  final.cpp  gear_example_node.cpp  laser_scanner_lib.cpp  laser_scanner_test.cpp  laser_speedometer_bae.cpp  oracle_tester.cpp  pick_and_place_demo.cpp  pose_tuner.cpp  qualifier1.cpp  qualifier2.cpp  qualifier2b.cpp  qualifier3.cpp  qualifier_1a.cpp  robot_move_as_part_flip_tester.cpp  robot_move_as_pick_part_tester.cpp  robot_move_as_tester.cpp  sensor_manager_tester.cpp  swapping_algorithms_tester.cpp  test_conveyor_fetch.cpp
cwru_ariac/srv/: OracleQuery.srv  RobotMoveAction.srv
final_submission/: README.md
final_submission/team_case/: build_team_system.bash  team_config.yaml
final_submission/team_case_kinetic/: run_team_system.bash
oracle/: CMakeLists.txt  README.md  package.xml
oracle/include/: Planner.h
oracle/src/: Planner.cpp  oracle.cpp
robot_move_as/: CMakeLists.txt  README.md  package.xml
robot_move_as/include/: RobotMoveActionServer.h
robot_move_as/src/: fetch_part_from_conveyor_fnc.cpp  flip_part_fnc.cpp  pick_part_fnc.cpp  robot_move_as.cpp
setup/: README.md  bashrc  bashrc_kinetic  install_ros_ariac.sh  install_ros_kinetic.sh  setup_workspace.sh  switch_to_ariac.sh
setup/models/conveyor_belt/: model.config  model.sdf
setup/models/gear_part/: model.sdf
submission/team_case/: build_team_system.bash
temp_launch_files/: gear.launch  gear.urdf.xacro  gear.world
ur10_ariac_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_ariac_moveit_config/config/: controllers.yaml  fake_controllers.yaml  gear.srdf  joint_limits.yaml
ur10_ariac_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gear_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ur10_ariac_moveit_config/urdf/: gear.urdf.xacro
ur10_moveit_config/config/: controllers.yaml  fake_controllers.yaml  ompl_planning.yaml  ur10.srdf
ur10_moveit_config/launch/: moveit_rviz.launch  ur10_moveit_planning_execution.launch
